<resources>
    <string name="app_name">TrelloClone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_up_description_text">Sign up to join us and access many boards across the world!</string>
    <string name="sign_in_description_text">Sign in to access boards and other functionalities!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait</string>
    <string name="log_in">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Card details and my cards page-->
    <string name="menu_my_cards">My cards</string>
    <string name="menu_my_board">My boards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="update">UPDATE</string>
    <string name="image_contentDescription">image</string>

    <string name="my_cards_fragment">MyCardsFragment</string>
    <string name="give_us_details_about_your_card">Give us details about your card</string>
    <string name="description">Description...</string>
    <string name="start_date">Start date...</string>
    <string name="pick_a_date">Pick a date...</string>
    <string name="pick_a_time">Pick a time...</string>
    <string name="due_date">Due date...</string>
    <string name="time">%1$s %2$s at %3$s:%4$s </string>
    <string name="date">%1$s %2$s at %3$s</string>
    <string name="title">Title</string>
    <string name="update_card">Update card</string>
    <string name="list_title">List title</string>
    <string name="add_list">Add list</string>
    <string name="let_s_start_with_cards">Let\'s start with cards...</string>
    <string name="let_s_start_with_boards">Let\'s start with boards...</string>
    <string name="add_card_name">Add card name</string>
    <string name="add_card">+ Add card</string>
    <string name="create_board">Create board</string>
    <string name="card_details">Card details</string>
    <string name="edit_board">Edit board</string>
    <string name="my_boards">My boards</string>
    <string name="search_member">Search Member</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="members">Members</string>

</resources>